Correct selector for top of scrollbar (fixes #74)

--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -78,7 +78,7 @@ h1 a {
   color: $color-base !important;
 }
 
-.feature_indigenous_scroll {
+.supports_custom_scrollbar {
   #messages_container::after {
     background: none !important;
   }
